test: change list to array list for support of past java version